[gd_scene load_steps=4 format=3 uid="uid://dsrs7umrw2txf"]

[ext_resource type="Script" path="res://UI/dialog_box.gd" id="1_20gkx"]
[ext_resource type="Texture2D" uid="uid://dl0jyuehpfsya" path="res://UI/ui_dialog.png" id="2_nbsql"]
[ext_resource type="FontFile" uid="uid://cowvg0etac74d" path="res://UI/ARCADECLASSIC.TTF" id="3_8pcmt"]

[node name="DialogBox" type="Control"]
top_level = true
layout_mode = 3
anchor_right = 0.262
anchor_bottom = 0.034
offset_right = 0.175964
offset_bottom = -0.0320015
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20gkx")

[node name="ColorRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = -15.0
offset_top = -29.0
offset_right = 362.0
offset_bottom = 15.0
texture = ExtResource("2_nbsql")

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 2
offset_left = 20.0
offset_top = 14.0
offset_right = 170.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8pcmt")
text = "dshjakdhsjkadsads"

[node name="TextTimer" type="Timer" parent="."]
one_shot = true

[node name="RemoveDialogTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="RemoveDialogTimer" to="." method="_on_remove_dialog_timeout"]
